<resources>
    <string name="title_activity_play">Play</string>
    <string name="DatabaseLists">DatabaseLists</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="app_name">Score Calculator</string>
    <string name="logoAlt">picture of Application Logo, which is two billiard balls</string>
    <string name="AP_lblTxt_addplayers">Add Players</string>
    <string name="AP_btnTxt_AddPlayer">Add Player</string>
    <string name="AP_txthint_add_name">Add Name</string>
    <string name="AP_btnTxt_Done">Done</string>
    <string name="M_btn_playPool">Play Pool</string>
    <string name="M_Btn_playSnooker">Play Snooker</string>
    <string name="imgText_RedBall">Red ball</string>
    <string name="imgText_BlueBall">Blue Ball</string>
    <string name="imgText_PinkBall">Pink Ball</string>
    <string name="imgText_BlackBall">Black Ball</string>
    <string name="imgText_YellowBall">Yellow Ball</string>
    <string name="imgText_BrownBall">Brown Ball</string>
    <string name="imgText_GreenBall">Green Ball</string>
    <string name="imgText_WhiteBall">White Ball</string>
    <string name="imgText_Border">Current Selected Ball</string>
    <string name="imgText_Next">Finish Turn</string>
    <string name="imgText_Pot">Ball Potted</string>
    <string name="imgText_Foul">Foul</string>
    <string name="imgText_RmRed">Remove Red Ball</string>
    <string name="txtText_CurrentBreak">Current Break:</string>

</resources>