<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlayers"
    android:background="@drawable/background_gradient"
    >

    <Button
        android:id="@+id/btn_AddPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:background="@color/black"
        android:onClick="addPlayer"

        android:text="@string/AP_btnTxt_AddPlayer"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgLogo"
        app:layout_constraintEnd_toStartOf="@+id/btn_Done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyt_Note" />

    <Button
        android:id="@+id/btn_Done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:background="@color/black"

        android:onClick="done"
        android:text="@string/AP_btnTxt_Done"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_AddPlayer"
        app:layout_constraintTop_toBottomOf="@+id/lyt_Note" />

    <TextView
        android:id="@+id/txtAddPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/AP_lblTxt_addplayers"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lyt_Note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_Note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/note"
        app:layout_constraintBottom_toTopOf="@+id/btn_AddPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddPlayers">

        <LinearLayout
            android:id="@+id/lyt_names"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp"

            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edtxt_AddName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/AP_txthint_add_name"
                android:text=""
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="wrap"
        app:srcCompat="@drawable/balls"
        android:contentDescription="@string/logoAlt" />
</androidx.constraintlayout.widget.ConstraintLayout>